[package]
name = "nois"
description = "The Nois standard library"
repository = "https://github.com/noislabs/nois"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.1.2" }
cosmwasm-schema = { version = "1.1.2" }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
rand_xoshiro = { version = "0.6.0", default-features = false }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }

# Deactivate default features in order to be able to use this on systems without
# access to an entropy souce via getrandom such as wasm32-unknown-unknown
rand = { version = "0.8.4", default-features = false }
