[package]
name = "nois"
description = "The Nois standard library"
repository = "https://github.com/noislabs/nois"
version = "0.8.0rc3"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
js = ["wasm-bindgen", "js-sys"]

[dependencies]
cosmwasm-std = { version = "1.1.8" }
cosmwasm-schema = { version = "1.1.8" }
hex = { version= "0.4" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
rand_xoshiro = { version = "0.6.0", default-features = false }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
wasm-bindgen = { version = "0.2.83", optional = true }
js-sys = { version = "0.3.60", optional = true }
sha2 = { version = "0.10.3", default-features = false }

# Deactivate default features in order to be able to use this on systems without
# access to an entropy souce via getrandom such as wasm32-unknown-unknown
rand = { version = "0.8.4", default-features = false }

[dev-dependencies]
hex-literal = "0.3.4"
